--- a/WEBDEV2-1/css/style.css
+++ b/WEBDEV2-1/css/style.css
@@ -8,9 +8,10 @@ h1{
 	border-radius: 50px 50px 50px 50px;
 	width: 95%;
 	color: white;
+	background-color: pink;
 	font-size: 24px;
 	/*background-image: linear-gradient(to right, #967315, #605c50);*/
-	border-style: groove;
+	/*border-style: groove;
 	border-color: black
 	color: rgba(0, 0, 0, 0.5);
 	text-decoration: none;
@@ -37,7 +38,7 @@ h1{
   background:
     repeating-linear-gradient(
     top, #565656, #131313 2px, #565656 1px
-  );
+  );*/
 }
 
 h2{
