--- a/WEBDEV2-1/css/style.css
+++ b/WEBDEV2-1/css/style.css
@@ -1,5 +1,5 @@
-body{
-	background-color: #313842;
+html, body{
+	background-color: #ff0000;
 	font-size: 20px;
 	font-family: "Times New Roman", Times, serif;
 }
